# lexiang-cli-remote

./: .gitignore  .markdownlint-cli2.jsonc  Cargo.toml  Makefile  README.md  build.rs  install.sh  justfile
.cargo-husky/hooks/: pre-commit
.claude-plugin/: plugin.json
.github/workflows/: cli-ci.yml  cli-release.yml  openclaw-ci.yml  openclaw-release.yml  security.yml  vscode-release.yml
completions/: _lx  lx.bash
crates/lx/: Cargo.toml
crates/skill-builder/: Cargo.toml
crates/skill-builder/src/: generator.rs  main.rs  parser.rs  skill.pest
docs/: DEVELOPMENT.md  README.md  USAGE.md
docs/dev/: development.md  module-boundaries.md
docs/plans/: 2026-04-20-mdx-block-converter-design.md
docs/user/: commands.md  getting-started.md  git-workflow.md  reference.md  schema.md  shell.md
openclaw/: README.md  cli-config.json  openclaw.plugin.json  package.json  pnpm-lock.yaml
openclaw/src/: cli.ts  index.ts  onboarding.ts  schema.ts
openspec/: AGENTS.md
schemas/: lexiang.json  unlisted.json
scripts/: build-all.sh  convert-skills-to-template.py  install.sh
skills/lx-block/: SKILL.md  SKILL.md.bak
skills/lx-connector/: SKILL.md  SKILL.md.bak
skills/lx-entry/: SKILL.md
skills/lx-git/: SKILL.md  SKILL.md.bak
skills/lx-ppt/: SKILL.md
skills/lx-search/: SKILL.md
skills/lx-sh/: SKILL.md
skills/lx-space/: SKILL.md
skills/lx-url-route/: SKILL.md
src/: datadir.rs  main.rs
src/auth/: mod.rs
src/cmd/: cli.rs  mod.rs  update.rs
src/daemon/: service.rs
src/mcp/: mod.rs  transport.rs
src/skill/: generator.rs  installer.rs
(+73 files in other folders)
