[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "warn"
unused = "warn"

[workspace.lints.clippy]
# Correctness
correctness = { level = "deny", priority = -1 }

# Suspicious
suspicious = { level = "warn", priority = -1 }

# Style
style = { level = "warn", priority = -1 }
needless_return = "warn"
redundant_closure_for_method_calls = "warn"

# Complexity
complexity = { level = "warn", priority = -1 }

# Perf
perf = { level = "warn", priority = -1 }

# Pedantic (selective)
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
cloned_instead_of_copied = "warn"
inefficient_to_string = "warn"

# Restrictions (selective)
dbg_macro = "warn"
print_stdout = "allow"  # CLI tool needs stdout
todo = "warn"

# Allow specific lints where appropriate
too_many_arguments = "allow"
type_complexity = "allow"

[profile.release]
strip = true
lto = true
codegen-units = 1
