[package]
name = "skill-builder"
version = "0.1.0"
edition = "2021"
description = "从 Markdown 源文件构建多目标 Skill 输出"

[[bin]]
name = "skill-builder"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"

[lints]
workspace = true
